# VDBpy

./: .gitignore  README.md  pyproject.toml  test.py  tests.py  vcommit.py
examples/: dump_usage.py
tests/: conftest.py
tests/integration/: test_comments_integration.py  test_edits_integration.py  test_entries_integration.py  test_search_integration.py  test_songs_integration.py
tests/unit/: test_edits_logic.py  test_song_search_params.py  test_utils_data.py  test_utils_date.py
vdbpy/: config.py  types.py
vdbpy/api/: __init__.py  activity.py  albums.py  artists.py  comments.py  edits.py  entries.py  entry_reports.py  events.py  messaging.py  notifications.py  search.py  series.py  songlists.py  songs.py  tags.py  user_library.py  users.py  venues.py  version_links.py
vdbpy/create/: artists.py  songs.py
vdbpy/edit/: entries.py  songlists.py  songs.py  tags.py
vdbpy/parsers/: __init__.py  albums.py  artists.py  edits.py  events.py  series.py  shared.py  songs.py  tags.py  venus.py
vdbpy/types/: __init__.py  albums.py  artists.py  changed_fields.py  core.py  dump.py  entry_versions.py  events.py  mappings.py  niconico.py  series.py  shared.py  songlists.py  songs.py  tags.py  users.py  venues.py
vdbpy/utils/: __init__.py  cache.py  console.py  data.py  date.py  dump.py  files.py  graph.py  logger.py  network.py  niconico.py  youtube.py
