[project]
name = "vdbpy"
version = "10.0.1"
description = "Base library for working with https://github.com/VocaDB/vocadb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache==5.6.3",
    "plotly==5.17.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.4",
    "tabulate==0.9.0",
]
