[project]
name = "vdbpy"
version = "11.0.0"
description = "Base library for working with https://github.com/VocaDB/vocadb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache==5.6.3",
    "plotly==5.17.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.4",
    "tabulate==0.9.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "COM812", "G004", "C901", "PLR0912", "PLR0913", "FBT001", "FBT002", "TRY003", "TD002", "TD003", "TD004", "FIX002", "S311", "ERA001"]

[tool.pyright]
typeCheckingMode = "strict"