[project]
name = "vdbpy"
version = "15.0.4"
description = "Base library for working with https://github.com/VocaDB/vocadb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.11.2",
    "defusedxml>=0.7.1",
    "diskcache==5.6.3",
    "genbadge>=1.1.2",
    "plotly==5.17.0",
    "pydeps>=3.0.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.4",
    "tabulate==0.9.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D202", "D204", "D205", "D212", "D213", "D400", "D403", "D415", "COM812", "G004", "C901", "PLR0912", "PLR0913", "FBT001", "FBT002", "TRY003", "TD002", "TD003", "TD004", "FIX002", "S311", "ERA001", "PGH003", "PT028"]

[tool.pyright]
typeCheckingMode = "strict"

# https://github.com/astral-sh/uv/issues/5903
# Ideally 'uv run tests' would run this
# uv run coverage run -m unittest tests.py
# uv run coverage xml
# uv run genbadge coverage -i coverage.xml